--- a/WebContent/WEB-INF/zul/crawler/web/pattern.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/pattern.zul
@@ -35,13 +35,16 @@
 			value="@{pattern.pattern}" />
 		<button label="Add" forward="onAdd" />
 	</vbox>
-	<hbox align="center">
-		<textbox cols="20" value="@{pattern.like}" />
-		<space />
-		<button label="Search" forward="onSearch" />
-	</hbox>
+
 	<listbox checkmark="true" multiple="true" itemRenderer="@{pattern}"
 		model="@{pattern.patternList}">
+		<listhead>
+			<listheader>
+				<textbox cols="20" value="@{pattern.like}" />
+				<space />
+				<button label="Search" forward="onSearch" />
+			</listheader>
+		</listhead>
 		<listfoot>
 			<listfooter>
 				<paging id="paging" detailed="true"
