--- a/WebContent/WEB-INF/zul/crawler/web/url.zul
+++ b/WebContent/WEB-INF/zul/crawler/web/url.zul
@@ -16,7 +16,7 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window id="searchUrl"
-	use="com.jaeksoft.websearch.web.controller.SearchUrl">
+	use="com.jaeksoft.searchlib.web.controller.crawler.web.UrlController">
 	<listbox fixedLayout="true" model="@{searchUrl.urlList}"
 		multiple="false" checkmark="false">
 		<listhead sizable="true">
