- BUG 2808554: Collapsing returns less rows than expected - FEATURE 2808582: Add paging on query result

--- a/WebContent/WEB-INF/zul/query/result.zul
+++ b/WebContent/WEB-INF/zul/query/result.zul
@@ -62,7 +62,8 @@
 	<panel title="Document(s)" visible="@{result.documentFound}"
 		collapsible="true" border="normal">
 		<panelchildren>
-			<listbox model="@{result.documents}">
+			<listbox model="@{result.documents}" mold="paging"
+				pageSize="10">
 				<listitem self="@{each='document'}">
 					<listcell>
 						<separator />
