Work in progress on "2812808	Manage several indices" and "2813996	Add schema tab panel to manager analyzer and fields"

--- a/WebContent/WEB-INF/zul/schema/fields.zul
+++ b/WebContent/WEB-INF/zul/schema/fields.zul
@@ -16,7 +16,7 @@
 	If not, see <http://www.gnu.org/licenses/>.
 -->
 <window id="conf"
-	use="com.jaeksoft.searchlib.web.controller.ConfigurationController">
+	use="com.jaeksoft.searchlib.web.controller.schema.FieldsController">
 	<grid model="@{conf.fields}">
 		<columns>
 			<column label="name" />
