--- a/WebContent/WEB-INF/zul/home.zul
+++ b/WebContent/WEB-INF/zul/home.zul
@@ -20,27 +20,31 @@
 	<panel title="Create a new index" border="normal">
 		<panelchildren>
 			<grid>
+				<columns sizable="false">
+					<column align="right" width="100px" />
+					<column align="left" width="200px" />
+					<column align="left" />
+				</columns>
 				<rows>
 					<row>
-						<hbox align="center">
-							<label value="Index name: " />
-							<textbox value="@{home.newIndexName}" />
-						</hbox>
+						<label value="Index name: " />
+						<textbox value="@{home.newIndexName}"
+							width="95%" />
+						<label
+							value="Choose a name for the index that will be created" />
 					</row>
 					<row>
-						<hbox align="center">
-							<label value="Template: " />
-							<listbox mold="select"
-								selectedItem="@{home.newIndexTemplate}"
-								model="@{home.templateList}">
-								<listitem self="@{each=telist}"
-									label="@{telist.template.publicName}" />
-							</listbox>
-							<label
-								value="@{home.newIndexTemplate.template.description}" />
-						</hbox>
+						<label value="Template: " />
+						<listbox mold="select" fixedLayout="true"
+							selectedItem="@{home.newIndexTemplate}"
+							model="@{home.templateList}">
+							<listitem self="@{each=telist}"
+								label="@{telist.template.publicName}" />
+						</listbox>
+						<label
+							value="@{home.newIndexTemplate.template.description}" />
 					</row>
-					<row>
+					<row spans="3">
 						<button label="Create" forward="onNewIndex" />
 					</row>
 				</rows>
@@ -49,6 +53,9 @@
 	</panel>
 	<separator height="10" />
 	<panel title="Index list" border="normal">
+		<toolbar>
+			<button label="Refresh" forward="onListRefresh" />
+		</toolbar>
 		<panelchildren>
 			<listbox selectedItem="@{home.clientFile}"
 				model="@{home.clientCatalog}" itemRenderer="@{home}" />
