- Some work on documentation (better handling chapter in pdf documentation) - Added xml déclaration in build.xml

--- a/WebContent/index.zul
+++ b/WebContent/index.zul
@@ -17,7 +17,8 @@
 -->
 <window id="index"
 	use="com.jaeksoft.searchlib.web.controller.IndexController">
-	<caption image="images/oss_16x16_WEB.png" label="Open Search Server 1.1-dev" />
+	<caption image="images/oss_16x16_WEB.png"
+		label="Open Search Server 1.1-dev" />
 	<tabbox>
 		<tabs>
 			<tab id="tabHome" label="@{index.indexTitle}"
